# eponym-ablation

./: .gitignore  README.md
1/: .gitignore  README.md  pyproject.toml  run.sh  streamlit_app.py
1/data/: README.md  dhaka_graph.graphml.meta.json  landmarks.yaml
1/docs/: PRESENTATION_OUTLINE.md  PROBLEM_STATEMENT.md  TEACHING_GUIDE.md
1/scripts/: instrumented_batch.py
1/src/dhaka_pathfind/: __init__.py  cli.py  config.py  sample_map.py
1/src/dhaka_pathfind/analysis/: __init__.py  batch.py  plots.py
1/src/dhaka_pathfind/cost/: __init__.py  context.py  model.py
1/src/dhaka_pathfind/graph/: __init__.py  load.py
1/src/dhaka_pathfind/heuristics/: __init__.py  geo.py  ground_truth.py  registry.py
1/src/dhaka_pathfind/search/: __init__.py  algorithms.py  metrics_utils.py  types.py
1/src/dhaka_pathfind/synthesis/: __init__.py  attributes.py
1/src/dhaka_pathfind/viz/: __init__.py  folium_routes.py
1/tests/: test_batch_row_count.py  test_dhaka_optional.py  test_synthesis_vectorized.py  test_toy_graph.py
2/: pyproject.toml  run.sh
2/fuel_csp/: __init__.py  analyzer.py  constraints.py  problem.py  synthetic.py  visualizer.py
2/fuel_csp/algorithms/: __init__.py  ac3.py  backtracking.py  base.py  heuristics.py  min_conflicts.py
2/results/: REPORT.md  experiments_raw.csv  experiments_summary.csv
2/scripts/: generate_report.py  run_experiments.py
2/tests/: conftest.py  test_algorithms.py  test_constraints.py  test_problem.py
3/: PROBLEM_STATEMENT.md  README.md  pyproject.toml  run.sh
3/docs/: algorithms.md
3/results/tables/: A1_convergence_summary.csv  A1_convergence_tests.csv  A2_communication_ablation.csv  A2_communication_curves.csv  A2_communication_tests.csv  A3_topology.csv  A3_topology_tests.csv  A4_generalisation.csv  A4_generalisation_tests.csv  A5_sensitivity.csv  A_best_schedule.csv
3/scripts/: run.py
3/shuttle_timetable/: __init__.py  baselines.py  ga.py  instance.py  pso.py  simulator.py
3/tests/: conftest.py  test_algorithms.py  test_shuttle.py
4/: PROBLEM_STATEMENT.md  README.md  pyproject.toml  run.sh
4/docs/: algorithms.md
4/results/tables/: B1_vi_correctness.csv  B2_baselines.csv  B3_learning_raw.csv  B3_learning_summary.csv  B4_model_misspecification.csv  B5_hyperparameters.csv  B6_anticipation.csv  B6_counterintuitive_holds.csv
4/scripts/: run.py
4/signal_control/: __init__.py  baselines.py  evaluation.py  mdp.py  q_learning.py  value_iteration.py
4/tests/: conftest.py  test_algorithms.py  test_signal_mdp.py
paper/: .gitignore  appendix_sweep.tex  main.bbl  main.tex  refs.bib  section_csp.tex
paper/submission/: README.md  abstract.txt
repro/: README.md  check_labels.py  csp_analyze.py  csp_rerun.py  csp_rerun_raw.csv  make_figures.py  path_cost_probe.py  search_analyze.py
