[project]
name = "shuttle-timetable"
version = "0.1.0"
description = "DU campus shuttle timetabling — AI Lab Assignment 3 (PSO/GA population-based search)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shuttle_timetable"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
