[project]
name = "signal-control"
version = "0.1.0"
description = "Campus-gate adaptive signal control — AI Lab Assignment 4 (MDP: value iteration / Q-learning)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["signal_control"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
